# rustic

./: Cargo.toml
src/: main.rs
